# HDK

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Doxyfile  README.md  adapter_8hpp_source.html  annotated.html  annotated_dup.js  api_2job_8hpp_source.html  classes.html  classhdk_1_1allocator__adapter.html  classhdk_1_1fallback__allocator.html  classhdk_1_1handle.html  classhdk_1_1impl_1_1job__system__stdasync.html  classhdk_1_1impl_1_1job__system__threadpool__lfq.html  classhdk_1_1linear__allocator.html  classhdk_1_1mallocator.html  classhdk_1_1null__allocator.html  classhdk_1_1stack__allocator.html  classhdk_1_1unique__cloneable.html  classhdk_1_1vector.html  clone_8hpp_source.html  concepthdk_1_1allocator.html  concepthdk_1_1job__system__type.html  concepthdk_1_1numeric.html  concepts.html  concepts.js  concepts_8hpp_source.html  debug_8hpp_source.html  dir_43cfdf47b80eeaa5be1bfdd067c6a910.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_805aeed8f2e022a6e1db9db4219fe0e4.html  dir_a8b38e7e1a1afdae9efbced345888566.html  dir_bd3af6e12b17c077384fd83992cb9bfe.html  dir_c5645dd7b32fcce7e3d5da8e3f26dc72.html  dir_cee5d9051758c161752c6ac89a05691f.html  dir_d9b800f3a5686c15f00713cce70cce11.html  dir_e4e59df91eb16cf7da15cfc80ae926f5.html  dir_ed72daa0e564e355babd6063e7af6f85.html  (+39 more)
.cache/clangd/index/: hdk.cpp.D210F133351B3A18.idx
.github/workflows/: build.yml  hdk.yml  test.yml
cmake/: configure.cmake  project.cmake  test.cmake  text.cmake
search/: all_0.js  all_1.js  all_10.js  all_3.js  all_4.js  all_5.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_d.js  all_e.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_5.js  classes_6.js  classes_8.js  classes_9.js  classes_a.js  concepts_0.js  functions_0.js  functions_2.js  functions_3.js  functions_4.js  functions_6.js  functions_7.js  functions_9.js  functions_a.js  functions_c.js  functions_d.js  groups_0.js  groups_1.js  groups_2.js  groups_4.js  searchdata.js  typedefs_1.js  variables_1.js
src/hdk/: concepts.hpp  debug.cpp  debug.hpp  debug.inl  hdk.cpp  hdk.hpp  profile.hpp  vector.cpp  vector.hpp  vector.inl
src/hdk/data/: handle.hpp  vector.cpp  vector.hpp  version.cpp  version.hpp
src/hdk/job/: job.cpp  job.hpp
src/hdk/job/api/: job.hpp
src/hdk/job/impl/stdasync/: job.cpp  job.hpp
src/hdk/job/impl/stdthreads/: job.cpp  job.hpp
src/hdk/job/impl/threadpool_lfq/: job.cpp  job.hpp
src/hdk/memory/: clone.hpp  memblk.hpp
src/hdk/memory/allocators/: adapter.hpp  fallback.hpp  linear.cpp  linear.hpp  malloc.cpp  malloc.hpp  null.hpp  stack.hpp  stack.inl
test/: CMakeLists.txt  hdk_allocator_test.cpp  hdk_clone_test.cpp  hdk_init_test.cpp  hdk_job_test.cpp  hdk_text_test.cpp  hdk_vector_test.cpp
